Añadido de capa de dominio y presentation para LogIn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginExam1Eval</string>
+    <string name="fragmento_de_altas">FRAGMENTO DE ALTAS</string>
 </resources>
